fixes #2275 wrap the category name in another span
...with a plaintext style

--- a/admin/themes/default/css/components/album_selector.css
+++ b/admin/themes/default/css/components/album_selector.css
@@ -164,6 +164,10 @@
   text-align: left;
 }
 
+.search-result-path-name {
+  unicode-bidi: plaintext;
+}
+
 .search-result-subcat-item {
   display: none;
 }
